--- a/package.json
+++ b/package.json
@@ -3,8 +3,14 @@
     "version": "1.0.0",
     "description": "Projeto feito em node usando typesscript",
     "main": "index.js",
+    "engines": {
+        "node": "14.x"
+    },
     "scripts": {
-        "start:dev": "nodemon -e ts,json,mustache src/server.ts"
+        "start:dev": "nodemon -e ts,json,mustache src/server.ts",
+        "postinstall": "tsc && copyfiles -u 1 src/**/*.mustache dist/",
+        "start:prod": "node dist/server.js",
+        "build:": "tsc"
     },
     "repository": {
         "type": "git",
@@ -20,7 +26,8 @@
     "devDependencies": {
         "@types/express": "^4.17.13",
         "@types/mustache-express": "^1.2.1",
-        "@types/node": "^16.10.4"
+        "@types/node": "^16.10.4",
+        "copyfiles": "^2.4.1"
     },
     "dependencies": {
         "dotenv": "^10.0.0",
