--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "dependencies": {
         "dotenv": "^10.0.0",
         "express": "^4.17.1",
-        "mustache-express": "^1.3.2"
+        "mustache-express": "^1.3.2",
+        "typescript": "^4.4.4"
     }
 }
