chore: renomeando placeholder do input de busca

--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
     },
     "scripts": {
         "start:dev": "nodemon -e ts,json,mustache src/server.ts",
-        "postinstall": "tsc && copyfiles -u 1 src/**/*.mustache dist/",
+        "postinstall": "npm run build && copyfiles -u 1 src/**/*.mustache dist/",
         "start:prod": "node dist/server.js",
-        "build:": "tsc"
+        "build": "tsc"
     },
     "repository": {
         "type": "git",
